Fix contrast of links for yellow chat
The default white links on yellow speech bubble are unreadable; now dark blue for contrast

--- a/style.css
+++ b/style.css
@@ -221,3 +221,6 @@ input:placeholder-shown {
 ._nd_ ._hh7[style*="background-color: rgb(255, 195, 0);"] {
 	color: black;
 }
+._nd_ ._hh7[style="background-color: rgb(255, 195, 0);"] a {
+	color: darkblue;
+}
